--- a/SDG.SpookyWisconsin.WebUI/Views/Cart/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Cart/Index.cshtml
@@ -27,7 +27,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Items) {
+@foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
@@ -38,12 +38,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.MerchId)
             </td>
-            <td>
+            @* <td>
                 @Html.DisplayFor(modelItem => item.Cost)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ImagePath)
-            </td>
+            </td> *@
             <td>
                 <a asp-action="Remove" asp-route-id="@item.Id">Remove from Cart</a>
             </td>
