--- a/SDG.SpookyWisconsin.WebUI/Views/Tier/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Tier/Index.cshtml
@@ -1,16 +1,14 @@
 ﻿@model IEnumerable<SDG.SpookyWisconsin.BL.Models.Tour>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tier List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table">
+    96
     <thead>
         <tr>
             <th>
